# GAM300

./: .gitattributes  .gitignore  CMakeLists.txt  MIGRATION_TO_CMAKE.md  README.md  api.lua  clean-android.bat  clean-android.sh  clean-cmake.bat  clean-cmake.sh  delete_dds.bat  generate_api.py  main.cpp  set-android-ndk.bat  setup-android-dev.bat  setup-android.bat  setup-scene-merge.bat  setup-vcpkg.bat  setup-windows-dev.bat
Editor/: CMakeLists.txt
Editor/include/: EditorMain.hpp
Editor/src/: EditorFunctions.cpp  EditorMain.cpp  editor_main.cpp
Engine/: CMakeLists.txt
Engine/include/: Engine.hpp
Engine/libraries/glew/: .lgtm.yml  .travis.yml  CMakeLists.txt  GeneratePkgConfig.cmake  Makefile  README.md  README_glew.md  azure-pipelines.yml  cmake-testbuild.sh
Engine/libraries/glfw/: CMakeLists.txt  CONTRIBUTORS.md  README.md
Engine/src/: Engine.cpp
Game/: CMakeLists.txt
Game/include/: GameMain.hpp
Game/src/: Game.cpp  GameCore.cpp  GameFunctions.cpp  GameMain.cpp  main.cpp
Project/: .gitattributes  ANDROID_BUILD.md  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  GAM300.sln  ImportDependencies.cmake  app_icon.rc  clean-cmake.bat  vcpkg.json
Project/Editor/: CMakeLists.txt  Editor.vcxproj  Editor.vcxproj.filters  imgui.ini
Project/Editor/include/: EditorCamera.hpp  EditorComponents.hpp  EditorInputManager.hpp  EditorState.hpp  GUIManager.hpp  NameComponentReflection.cpp  RaycastUtil.hpp  ReflectionRenderer.hpp  SnapshotManager.hpp  UndoSystem.hpp  UndoableWidgets.hpp
Project/Editor/src/: EditorCamera.cpp  EditorComponents.cpp  EditorInputManager.cpp  EditorState.cpp  GUIManager.cpp  InspectorCustomRenderers.cpp  RaycastUtil.cpp  ReflectionRenderer.cpp  SnapshotManager.cpp  SpriteAnimationInspector.cpp  UndoSystem.cpp  UndoableWidgets.cpp  main.cpp  testScript.cpp
Project/Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters
Project/Engine/include/: Engine.h  Logging.hpp  Prefab.hpp  PrefabComponent.hpp  PrefabIO.hpp  PrefabLinkComponent.hpp  RunTimeVar.hpp  TimeManager.hpp  WindowManager.hpp  pch.h
Project/Engine/src/: Engine.cpp  Logging.cpp  Prefab.cpp  PrefabIO.cpp  RunTimeVar.cpp  TestScene.cpp  TimeManager.cpp  TransformSystem.cpp  WindowManager.cpp
Project/Game/: CMakeLists.txt  Game.vcxproj
Project/Game/src/: GameManager.cpp  main.cpp
Project/Libraries/build-scripts/: build-freetype-android.sh
Project/Libraries/lua/: CMakeLists.txt
Project/Libraries/spdlog/: CMakeLists.txt
Project/ProjectSettings/: TagsAndLayers.json  last_scene.txt
Project/Resources/: New Scene.scene  Physics Object.prefab  delete_resources.bat  dora the explorer.prefab
Project/Resources/Animations/: Enemy@Idle.fbx  EnemyAC.animator  Kusane@Death.fbx  Kusane@Hurt.fbx  Kusane@Idle.fbx  Kusane@Jump.fbx  Kusane@Land.fbx  Kusane@Roll.fbx  Kusane@Run.fbx  Kusane@Slash2.fbx  Kusane@Slash3.fbx  KusaneController.animator  MinibossAC.animator  PlayerAC.animator  PlayerController.animator  PlayerSlashInward.fbx  PlayerSlashOutward.fbx
Project/Resources/Configs/: input_config.json
Project/Resources/Cutscenes/: Dialogue_test.txt  TESTING_TEXT.txt
Project/Resources/Materials/: 1MeterCube_MAT_Text_01.mat  1MeterCube_Mat.mat  Alley1_Ceiling_lambert1.mat  Alley1_Floor_lambert1.mat  Alley1_Railing1_lambert1.mat  Alley1_Railing2_lambert1.mat  Alley1_Railing3_lambert1.mat  Alley1_Railing4_lambert1.mat  Alley1_Railing5_lambert1.mat  Alley1_Railings1_lambert1.mat  Alley1_Railings2_lambert1.mat  Alley1_Railings3_lambert1.mat  Alley1_Railings4_lambert1.mat  Alley1_Railings5_lambert1.mat  Alley1_Wall1_lambert1.mat  Alley1_Wall2_lambert1.mat  Alley1_Wall3_lambert1.mat  Alley1_lambert1.mat  AltarTable_defaultPolygonShader.mat  ArrayOfScrolls_defaultPolygonShader.mat  Backpack Material.mat  BendScroll_standardSurface1.mat  BookShelf4_lambert1.mat  BookStack2_defaultPolygonShader.mat  BookStack3_lambert1.mat  BooksStack1_defaultPolygonShader.mat  Bookshelf2_lambert1.mat  Bookshelf3_lambert1.mat  Bookshelf_standardSurface1.mat  Bookshelf_standardSurface3.mat  BossRoom_Arena_lambert1.mat  BossRoom_Ceiling_pasted__standardSurface5.mat  BossRoom_Ceiling_standardSurface3.mat  BossRoom_Floor_pasted__floor6.mat  BossRoom_Floor_standardSurface3.mat  BossRoom_Plank1_lambert1.mat  BossRoom_Plank2_lambert1.mat  BossRoom_Shrine_standardSurface3.mat  BossRoom_Stairs_standardSurface3.mat  BossRoom_Wall1_Wall2_lambert1.mat  (+887 more)
Project/Resources/Models/: 1MeterCube.fbx  EnemyMeleeModel.fbx  EnemyModel.fbx  FinalBaseMesh.mesh  GroundCrackModel.fbx  KarasuGroundModelV2.fbx  KarasuModel.fbx  KarasuTest.fbx  LowPolyFeatherChain.fbx  SingleChain.fbx  Sphere.fbx  cube.mtl
Project/Resources/Prefabs/: A1R1.prefab  Camera (1).prefab  Camera.prefab  Chain Prefab (Move children to global).prefab  ChainEndpoint.prefab  ChainManager (1).prefab  ChainManager.prefab  Checkpoint1.prefab  Checkpoint_New.prefab  CinemaBar.prefab  EnemyClawVFX.prefab  EnemyHurtFeather.prefab  EnemyKarasu.prefab  Feather.prefab  FeatherBombTarget.prefab  FeatherSkill.prefab  FeatherSkillProjectile.prefab  FeatherSkillProjectileRemnant.prefab  FinalFlyingEnemy.prefab  FinalGroundMeleeEnemy.prefab  FinalGroundRangedEnemy.prefab  FlyingEnemyNew.prefab  GameManager.prefab  GameOverMenu.prefab  GroundSlamVFX.prefab  Incense_LowPoly.prefab  KarasuFlyingRanged.prefab  KarasuGroundedMelee.prefab  KarasuGroundedRanged.prefab  Knife_01.prefab  Knife_FeatherBomb.prefab  Lantern.prefab  Link.prefab  Link1.prefab  MainMenuRoom.prefab  MeleeEnemy.prefab  MeleeEnemyNew.prefab  MiniBossClawVFX.prefab  Miniboss (1).prefab  Miniboss.prefab  (+35 more)
Project/Resources/Scene/: scene.json
Project/Resources/Scenes/: 00_SplashScreen.scene  00_SplashScreen.scene.temp  01_MainMenu.scene  01_MainMenu.scene.temp  02_IntroCutscene.scene  02_IntroCutscene.scene.temp  03_Loading.scene  03_Loading.scene.temp  04_GameLevel.scene  04_GameLevel.scene.temp  04_GameLevelMap.scene  (+51 more)
Project/ScriptTest/: ScriptTest.cs  ScriptTest.csproj  ScriptTest.sln
Project/Scripting/: Scripting.vcxproj  Scripting.vcxproj.filters
Project/cmake/: CopyResources.cmake
(+2626 files in other folders)
